cabal-version: 2.4

name: aoc2024
version: 0.1.0.0

author: Kyle Mayes
maintainer: kyle@mayeses.com

library
    hs-source-dirs: library
    exposed-modules:
        Grid2d,
        Point2d,
        Solution,
        Utility

    build-depends:
        base ^>=4.17.2.0,
        containers ^>= 0.6.6,
        multiset ^>= 0.3.4.3,
        parsec ^>= 3.1.17.0,
        text ^>=2.1,
        vector ^>= 0.13.1.0
    
    default-language: Haskell2010
    default-extensions:
        DeriveFunctor,
        FlexibleInstances,
        InstanceSigs,
        OverloadedStrings,
        RankNTypes,
        TupleSections

executable main
    hs-source-dirs: .
    main-is: Main.hs
    other-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18
        Day19
        Day20
        Day21
        Day22
        Day23
        Day24
        Day25

    build-depends:
        base ^>=4.17.2.0,
        containers ^>= 0.6.6,
        multiset ^>= 0.3.4.3,
        parsec ^>= 3.1.17.0,
        text ^>=2.1,
        vector ^>= 0.13.1.0,
        aoc2024

    default-language: Haskell2010
    default-extensions:
        DeriveFunctor,
        FlexibleInstances,
        InstanceSigs,
        OverloadedStrings,
        RankNTypes,
        TupleSections
